--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <title>AsistenteMagic</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--<link rel="icon" type="image/x-icon" href="favicon.ico">-->
+  <link rel="icon" type="image/x-icon" href="ChatGPT Image 8 may 2025, 08_21_30.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
